2006-04-12  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.13 TAGGED FOR RELEASE ***

	* changes:	updates for another RC.

2006-04-11  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCmdMZ.c:	Stop some interference between enter traces
	* tests/trace.test:	and enterstep traces.  [Bug 1458266]

2006-04-10  Don Porter  <dgp@users.sourceforge.net>

	* changes:	updates for another RC.

2006-04-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclRegexp.c (FinalizeRegexp): full reset data to
	indicate readiness for reinitialization.

2006-04-06  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclIndexObj.c (Tcl_GetIndexFromObjStruct):	It seems
	* tests/indexObj.test:	there are extensions that rely on the prior
	* doc/GetIndex.3:	behavior that the empty string cannot succeed
	as a unique prefix matcher, so I'm restoring Donal Fellow's solution.
	Added mention of this detail to the documentation.  [Bug 1464039]

2006-04-06  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4: removed TCL_IO_TRACK_OS_FOR_DRIVER_WITH_BAD_BLOCKING
	define on Darwin. [Bug 1457515]
	* unix/configure: autoconf-2.13

2006-04-05  Don Porter  <dgp@users.sourceforge.net>

	* library/reg/pkgIndex.tcl:	Long overlooked bump to registry package
	* win/tclWinReg.c:		version 1.1.4 (should have been done
	for the Tcl 8.4.8 release!)

	* library/dde/pkgIndex.tcl:	Long overlooked bump to dde package
	* win/tclWinDde.c:		version 1.2.4 (should have been done
	for the Tcl 8.4.8 release!)

2006-04-05  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclIndexObj.c (Tcl_GetIndexFromObjStruct): Allow empty
	strings to be matched by the Tcl_GetIndexFromObj machinery, in
	the same manner as any other key.  [Bug 1464039]

2006-04-04  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPkg.c:	Revised Bug 1162286 fix from 2005-11-08
	* tests/pkg.test:	to be even more forgiving of package version
	mismatch errors in [package ifneeded] commands, not even logging any